# pyparadoxdb

./: README.md  cspell.json  pyproject.toml  setup.py  test.py
.github/workflows/: test.yml
docs/: conf.py  index.rst
src/pyparadoxdb/: __about__.py  __init__.py
tests/: __init__.py  test.py
